<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">TeliTrax</string>
    <string name="app_logo">TeliTrax</string>
    <string name="settings_id_title">E-mail Address</string>
    <string name="settings_address_title">Server address</string>
    <string name="settings_address_summary">Domain name or IP address</string>

    <string name="settings_subject_id_title">Subject ID</string>
    <string name="settings_subject_id_summary">Subject ID summary</string>

    <string name="settings_device_name_title">Device Name</string>
    <string name="settings_device_name_summary">Device Name Summary</string>

    <string name="settings_port_title">Server port</string>
    <string name="settings_port_summary">Tracking server TCP port</string>
    <string name="settings_interval_title">Frequency</string>
    <string name="settings_interval_summary">Messages interval in seconds</string>
    <string name="settings_status_title">Service status</string>
    <string name="settings_status_off">Start</string>
    <string name="settings_status_on">Stop</string>
    <string name="settings_restrict_by_time">Restrict by time</string>
    <string name="settings_status_off_summary">Service stopped</string>
    <string name="settings_status_on_summary">Service running</string>
    <string name="settings_extended_title">Survos format</string>
    <string name="settings_extended_summary">Use Survos message format</string>
    <string name="settings_provider_title">Location provider</string>
    <string name="settings_provider_summary">Source of location data</string>

    <string-array name="settings_provider_names">
        <item>GPS provider</item>
        <item>Network provider</item>
        <item>Mixed provider</item>
    </string-array>

    <string name="menu_status">Status</string>
    <string name="menu_about">About</string>
    <string name="menu_clear">Clear</string>
    <string name="about_description">Real time GPS tracker for Android devices, . Compatible with Survos Tracking Server and other tracking systems.</string>
    <string name="about_license">This application is based on the free and open source Traccar Client for Android, source code is licensed under Apache License Version 2.0 and available on GitHub.</string>
    <string name="about_web">For more information visit\nwww.traccar.org/client, or \nwww.survos.com</string>
    <string name="status_service_create">Service started</string>
    <string name="status_service_start">Service started</string>
    <string name="status_service_destroy">Service stopped</string>
    <string name="status_connection_success">Connection succeeded</string>
    <string name="status_connection_fail">Connection failed</string>
    <string name="status_send_fail">Send failed</string>
    <string name="status_location_update">Location update</string>
    <string name="status_preference_update">Preference update</string>
    <string name="status_connectivity_change">Connectivity change</string>
    <string name="connection_active">Connection Active</string>
    <string name="timedifference">0 hours - 24 hours</string>
    <string name="set">Set</string>
    <string name="select_time_interval">Select time interval</string>
    <string name="title_activity_map_home">MapHomeActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="agreement">Agreement</string>
    <string name="agree">I agree</string>
    <string name="disagree">Disagree</string>
    <string name="title_activity_splash">Splash</string>

</resources>
