<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >

    <Preference
        android:key="id"
        android:title="@string/settings_id_title" />

    <EditTextPreference
        android:defaultValue="Subject ID"
        android:key="subject_id"
        android:summary="@string/settings_subject_id_summary"
        android:title="@string/settings_subject_id_title" />

    <!--<EditTextPreference-->
    <!--android:defaultValue="Device Name"-->
    <!--android:key="device_name"-->
    <!--android:summary="@string/settings_device_name_summary"-->
    <!--android:title="@string/settings_device_name_title" />-->


    <!--<EditTextPreference-->
    <!--android:defaultValue="tracking.survos.com"-->
    <!--android:key="address"-->
    <!--android:summary="@string/settings_address_summary"-->
    <!--android:title="@string/settings_address_title" />-->

    <!--<EditTextPreference-->
    <!--android:defaultValue="5000"-->
    <!--android:key="port"-->
    <!--android:numeric="integer"-->
    <!--android:summary="@string/settings_port_summary"-->
    <!--android:title="@string/settings_port_title" />-->

    <Preference
        android:defaultValue="60"
        android:key="interval"
        android:numeric="integer"
        android:summary="@string/settings_interval_summary"
        android:title="@string/settings_interval_title" />


    <Preference
        android:defaultValue="false"
        android:key="time_restrict"
        android:title="@string/settings_restrict_by_time" />


</PreferenceScreen>